welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if (negative==true) {
    return false
  } else {
    if ((10+a)<10) {
      return true
    }
  }
}